# rules_fdsdk

./: README.md  WORKSPACE
bst/: def.bzl  deps.bzl
bst/private/: BUILD.sdk.bazel  bst_toolchain.bzl  providers.bzl  sdk.bzl
bst/toolchain/: toolchains.bzl
examples/lib/: BUILD
examples/main/: BUILD  hello-greet.cc
